# sample-rust-lambda-serverless

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  serverless.yml
src/: main.rs
