[package]
authors = ["Soichi David Nakahashi <sdn03.tech@gmail.com>"]
name = "sample-rust-lambda-serverless"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.3.0"
log = "0.4.14"
serde = "1.0.124"
serde_derive = "1.0.124"
serde_json = "1.0.64"
simple_logger = "1.11.0"
tokio = { version="1.4.0", features = ["full"] }